--- a/genweb/organs/browser/stylesheets/genweb_organs.css
+++ b/genweb/organs/browser/stylesheets/genweb_organs.css
@@ -657,3 +657,6 @@ span.label.label-danger {float: right;}
     padding-top: 25px;
     min-height: 600px;
 }
+
+
+body, .smooth-container { scroll-behavior: smooth }
