updated impersonate view

--- a/genweb/organs/browser/stylesheets/genweb_organs.css
+++ b/genweb/organs/browser/stylesheets/genweb_organs.css
@@ -660,3 +660,6 @@ span.label.label-danger {float: right;}
 
 
 body, .smooth-container { scroll-behavior: smooth }
+
+#sessionTabs {padding-bottom: 20px;}
+/*div@se.tab-content**/
