--- a/genweb/organs/browser/stylesheets/genweb_organs.css
+++ b/genweb/organs/browser/stylesheets/genweb_organs.css
@@ -215,15 +215,6 @@ span.proposalNumberSubpunt {
    left:10px;
 }
 
-
-.titleSize {
-    color: #555 !important;
-    font-size: 16px;
-    font-weight: normal;
-    line-height: 21px;
-}
-
-
 .llistaAfegir {
     /*border-top: 1px solid #777777;*/
     margin-top:10px;
@@ -245,6 +236,10 @@ span.proposalNumberSubpunt {
 }
 
 .editTitle.editable.subtitleSize {
+    color: #555;
+    font-weight: normal;
+}
+.titleSize {
     color: #555;
     font-weight: normal;
 }
@@ -429,11 +424,6 @@ span.editable-container.editable-inline  input[type="text"] {
     color: white;
 }
 
-
-.label.dropdown-toggle {
-
-}
-
 .DADES .caret {
     border-top: 4px solid #557c95;
     vertical-align: middle;
@@ -587,6 +577,203 @@ background-image: linear-gradient(to bottom, #006fae, #007bc0);
     border-color: #007bc0;
 }
 
+/* APORTACIÓN DAVID CABALLERO */
+
+.bodyPresentation span.proposalNumber {
+    color: #CCC;
+    margin-left: -7px;
+    margin-right: 12px;
+    font-size: 30px;
+}
+
+.bodyPresentation span.proposalNumberSubpunt {
+    color: rgba(85, 124, 149, 0.77);
+    font-size: 25px;
+}
+
+.bodyPresentation .agreement.editable.editable-click{
+    font-size: 20px;
+}
+
+.bodyPresentation .affix {
+    padding-right: 20px;
+    position: fixed;  
+    top: 30px;
+}
+
+.bodyPresentation .puntTitle {
+    font-size: 25px;
+    font-weight: normal;
+    margin-bottom: 15px;
+    color: #557C95;
+}
+
+.bodyPresentation .editTitle.editable.subtitleSize {
+    color: #555;
+    font-weight: regular;
+    font-size: 23px;
+}
+
+.bodyPresentation .DADES ul, .DADES ol {
+    margin: 14px 0;
+    padding-top: 10px;
+    padding-right: 0px;
+}
+
+
+.bodyPresentation .btn-group.open .dropdown-toggle {
+    width: 185px;
+    height: 30px;
+}
+
+
+.bodyPresentation .DADES button {
+    width: 150px;
+    height: 30px;
+}
+
+
+.bodyPresentation .label.dropdown-toggle:hover {
+    border-color: rgb(120, 174, 248);
+    background-color: rgba(33, 154, 224, 0.29);
+    width: 185px;
+    }
+
+
+.bodyPresentation .fa-arrow-up:before {
+    color: #DDD;
+}
+
+.bodyPresentation .fa-chevron-up:before {
+    color: #DDD;
+}
+
+.bodyPresentation .fa-chevron-down:before {
+    color: #DDD;
+}
+
+.bodyPresentation .fa-arrow-down:before {
+    color: #DDD;
+}
+
+.bodyPresentation .label.dropdown-toggle {
+    font-size: 15px;
+}
+
+.bodyPresentation .titleSize {
+    line-height: 20px;
+    font-size: 32px;
+}
+
+.bodyPresentation #sortable li {    
+    background: rgba(0, 90, 141, 0.05);
+    margin: none; 
+    padding: none;
+    box-shadow: none;
+    padding-right: 50px;
+     }
+
+.bodyPresentation .dropdown-menu {    
+    margin: none;
+    padding:  none;
+    box-shadow:  none;
+}
+
+
+.bodyPresentation .li {
+    line-height: 25px;
+}
+
+.bodyPresentation .presentation_template {
+    width: 80%;
+}
+
+.bodyPresentation hr {
+    border-top: 3px solid #557c95;
+}
+
+.bodyPresentation .DADES button {
+    width: 185px;
+}
+
+.bodyPresentation .label.dropdown-toggle:hover {
+    width: 185px;
+}
+
+.bodyPresentation .btn-group {
+    margin-right: 20px;
+}
+
+.bodyPresentation .subpuntTitle {
+    line-height:none; 
+}
+
+.bodyPresentation a:hover {
+    color: #232e92;
+    text-decoration: underline;
+    line-height: 21px;
+}
+
+.bodyPresentation .fa-3x {
+    font-size: 4em;
+}
+
+.bodyPresentation .fa-home:before {
+    color: #DDD;
+} 
+
+.bodyPresentation .listFiles a {
+    font-size: 20px;
+}
+
+.bodyPresentation .btn-group {
+    margin-right: 20px;
+}
+
+.bodyPresentation .dropdown-menu {
+    width: 100%;
+}
+
+
+.bodyPresentation .label.dropdown-toggle > a {
+    color: #002237;
+    font-size: 16px;
+}
+
+.bodyPresentation .dropdown-menu.estatsToggle a {
+    padding-left: 10px;
+}
+.bodyPresentation  .dropdown-menu.estatsToggle a span {
+    margin-left: 5px;
+}
+
+.bodyPresentation #sortable .filesinTable {
+    margin-top: 10px;
+    font-size: 20px;
+    padding-top: 2px;
+    padding-bottom: 2px;
+    line-height: 25px;    
+    padding-left: 20px;
+    background: transparent;
+}
+
+.bodyPresentation .dropdown-menu a {
+    display: block;
+    padding: 2px 9px;
+    clear: both;
+    font-weight: normal;
+    line-height: 18px;
+    color: #000;
+    white-space: nowrap;
+    font-size: 14px;.bodyPresentation .btn-group.open .dropdown-toggle
+    font-weight: bold;
+}
+
+.bodyPresentation #sortable .dropdown-menu{
+    padding-top: 0px;
+    padding-bottom: 0px;
+}
+
 /*.portaltype-genweb-organs-organsfolder a#plone-contentmenu-workflow.dropdown-toggle,
 .portaltype-genweb-organs-organgovern a#plone-contentmenu-workflow.dropdown-toggle,
 .portaltype-genweb-organs-punt a#plone-contentmenu-workflow.dropdown-toggle,
@@ -663,3 +850,4 @@ body, .smooth-container { scroll-behavior: smooth }
 
 #sessionTabs {padding-bottom: 20px;}
 /*div@se.tab-content**/
+
