--- a/genweb/organs/browser/stylesheets/genweb_organs.css
+++ b/genweb/organs/browser/stylesheets/genweb_organs.css
@@ -895,3 +895,43 @@ body, .smooth-container { scroll-behavior: smooth }
     padding-top: 10px;
 }
 
+
+dt.ontenttype-genweb-organs-historicfolder:before,
+i.icon-genweb-organs-historicfolder,
+#listing-table a.ontenttype-genweb-organs-historicfolder:before,
+.template-folder_tabular_view .listing a.ontenttype-genweb-organs-historicfolder:before
+{
+    background-position: -242px -168px !important;
+}
+
+dt.contenttype-genweb-organs-organgovern:before,
+i.icon-genweb-organs-organgovern,
+#listing-table a.contenttype-genweb-organs-organgovern:before,
+.template-folder_tabular_view .listing a.contenttype-genweb-organs-organgovern:before
+{
+    background-position: -48px -48px !important;
+}
+
+dt.contenttype-genweb-organs-sessio:before,
+i.icon-genweb-organs-sessio,
+#listing-table a.contenttype-genweb-organs-sessio:before,
+.template-folder_tabular_view .listing a.contenttype-genweb-organs-sessio:before
+{
+    background-position: -312px -168px !important;
+}
+
+dt.contenttype-genweb-organs-document:before,
+i.icon-genweb-organs-document,
+#listing-table a.contenttype-genweb-organs-document:before,
+.template-folder_tabular_view .listing a.contenttype-genweb-organs-document:before
+{
+    background-position: -24px -24px !important;
+}
+
+dt.contenttype-genweb-organs-acta:before,
+i.icon-genweb-organs-acta,
+#listing-table a.contenttype-genweb-organs-acta:before,
+.template-folder_tabular_view .listing a.contenttype-genweb-organs-acta:before
+{
+    background-position: -24px -24px !important;
+}
