--- a/genweb/organs/browser/stylesheets/genweb_organs.css
+++ b/genweb/organs/browser/stylesheets/genweb_organs.css
@@ -975,3 +975,6 @@ i.icon-genweb-organs-organsfolder,
 {
     background-position: -384px -120px !important;
 }
+
+
+.share_popover {display: none;}
