--- a/genweb/organs/browser/stylesheets/print.css
+++ b/genweb/organs/browser/stylesheets/print.css
@@ -1,5 +1,3 @@
-/* START CSS PRINT */
-
 @media print {
     @page {
         margin: 1.5cm;
@@ -65,6 +63,29 @@
 #content a:visited:after {
    content: " [" attr() "] " !important;
 }
-}
 
-/* END CSS PRINT */
+a:hover {
+  text-decoration:none;}
+a {
+  text-decoration:none;}
+.plain a {
+  color:#555555;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 12px;}
+body {font-family: Arial, Helvetica, sans-serif;
+      font-size: 10px;
+      color: #333333;
+      width:733px;
+      font-size:11px !important;
+      }
+h2 {
+  margin-bottom:20px !important;
+}
+h3 {
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 12px;
+}
+h4 {
+  font-size:11px !important;
+}
+}
