--- a/genweb/organs/browser/stylesheets/genweb_organs.css
+++ b/genweb/organs/browser/stylesheets/genweb_organs.css
@@ -589,7 +589,7 @@ background-image: linear-gradient(to bottom, #006fae, #007bc0);
 }
 
 .bodyPresentation span.proposalNumberSubpunt {
-    color: rgba(85, 124, 149, 0.77);
+    color: #CCC;
     font-size: 25px;
 }
 
@@ -996,10 +996,15 @@ input#acordNumber {width: 159px;}
 .bodyPresentation #sortable ol.li_subgrups div.subpuntTitle ul li.filesinTable {padding-left: 50px;}
 
 .agreementClass  {
-    padding-left: 30px;
-    font-size: 20px;
+    font-size: 17px;
     color: #555;
 }
+
+.agreementSubClass {
+    font-size: 17px;
+    color: #555;
+}
+
 
 li.filesinTable {color: #555;}
 
