--- a/genweb/organs/browser/stylesheets/genweb_organs.css
+++ b/genweb/organs/browser/stylesheets/genweb_organs.css
@@ -1012,3 +1012,20 @@ ul.nav.nav-tabs {margin-bottom: 0px;}
 
 div.tab-pane.fade.active.in {background-color: white;
 border: 1px solid #b2b2b2;}
+
+.panel-title {
+        margin-top: 0;
+    margin-bottom: 0;
+    font-size: 16px;
+    color: inherit;
+}
+
+.panel-default>.panel-heading {
+    color: #333;
+    background-color: #f5f5f5;
+    border-color: #ddd;
+}
+
+.panel-default {
+    border-color: #ddd;
+    }
