--- a/genweb/organs/browser/stylesheets/genweb_organs.css
+++ b/genweb/organs/browser/stylesheets/genweb_organs.css
@@ -1029,3 +1029,8 @@ border: 1px solid #b2b2b2;}
 .panel-default {
     border-color: #ddd;
     }
+
+span.agreementClassPunt {
+    font-size: 11px;
+    font-weight: bold;
+}
