--- a/genweb/organs/browser/stylesheets/genweb_organs.css
+++ b/genweb/organs/browser/stylesheets/genweb_organs.css
@@ -628,27 +628,35 @@ background-image: linear-gradient(to bottom, #006fae, #007bc0);
 
 
 .bodyPresentation .btn-group.open .dropdown-toggle {
-    width: 185px;
+    width: 35px;
     height: 30px;
 }
 
 
 .bodyPresentation .DADES button {
     height: 30px;
-    width: 185px;
-    line-height: 25px;
+    width: 35px;
+    line-height: 35px;
 }
 
 .bodyPresentation .DADES button:hover {
-    line-height: 25px;
+    line-height: 35px;
 }
 
+.bodyPresentation .label.dropdown-toggle:hover {
+    width: 35px;
+}
 
 .bodyPresentation .label.dropdown-toggle:hover {
     border-color: rgb(120, 174, 248);
     background-color: rgba(33, 154, 224, 0.29);
-    width: 185px;
+    width: 35px;
     }
+
+ .bulletPuntPresentation {
+    margin-left: -35px;
+    padding-right: 25px;
+}
 
 
 .bodyPresentation .fa-arrow-up:before {
@@ -723,9 +731,7 @@ background-image: linear-gradient(to bottom, #006fae, #007bc0);
     border-top: 3px solid #557c95;
 }
 
-.bodyPresentation .label.dropdown-toggle:hover {
-    width: 185px;
-}
+
 
 .bodyPresentation .subpuntTitle {
     line-height:30px;
@@ -1034,3 +1040,4 @@ span.agreementClassPunt {
     font-size: 11px;
     font-weight: bold;
 }
+
