--- a/genweb/organs/browser/stylesheets/genweb_organs.css
+++ b/genweb/organs/browser/stylesheets/genweb_organs.css
@@ -509,6 +509,7 @@ background-color: transparent;
     margin-top: 10px;
     padding: 15px;
     width: 96%;
+    margin-bottom: 15px;
 }
 
 .editable-error-block.ui-state-error {
